// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlobStoresForm renders the form and buttons when the File type is selected 1`] = `
<div>
  <main
    class="nx-page-main nxrm-blob-stores"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <span>
            Create Blob Store
          </span>
        </h1>
      </div>
    </div>
    <div
      class="nxrm-section nx-tile"
    >
      <div
        class="nx-tile-content"
      >
        <form
          class="nx-form nxrm-blob-stores-form"
        >
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="type"
            >
              <span
                class="nx-label__text"
              >
                Type
              </span>
            </label>
            <div
              class="nxrm-select"
            >
              <select
                class="nx-form-select"
                id="type"
                name="type"
              >
                <option
                  disabled=""
                  value=""
                />
                <option
                  value="file"
                >
                  File
                </option>
                <option
                  value="group"
                >
                  Group
                </option>
                <option
                  value="s3"
                >
                  S3
                </option>
              </select>
            </div>
          </div>
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="name"
            >
              <span
                class="nx-label__text"
              >
                Name
              </span>
            </label>
            <div
              class="nx-text-input pristine"
            >
              <div
                class="nx-text-input__box"
              >
                <input
                  aria-errormessage="nx-text-input-invalid-message-00000000"
                  aria-invalid="false"
                  class="nx-text-input__input"
                  id="name"
                  name="name"
                  type="text"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-00000000"
                role="alert"
              />
            </div>
          </div>
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="path"
            >
              <span
                class="nx-label__text"
              >
                Path
              </span>
            </label>
            <p
              class="nx-p"
            >
              An absolute path or a path relative to &lt;data-directory&gt;/blobs
            </p>
            <div
              class="nx-text-input nx-text-input--long pristine"
            >
              <div
                class="nx-text-input__box"
              >
                <input
                  aria-errormessage="nx-text-input-invalid-message-11111111"
                  aria-invalid="false"
                  class="nx-text-input__input"
                  id="path"
                  name="path"
                  type="text"
                  value="/<data-directory>/blobs/"
                />
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-11111111"
                role="alert"
              />
            </div>
          </div>
          <div
            class="nxrm-soft-quota"
          >
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="softQuota.enabled"
              >
                <span
                  class="nx-label__text"
                >
                  Soft Quota
                </span>
              </label>
              <p
                class="nx-p"
              >
                Raises an alert when the blob store exceeds a constraint
              </p>
              <label
                class="nx-radio-checkbox nx-checkbox tm-unchecked"
                name="softQuota.enabled"
              >
                <input
                  class="nx-radio-checkbox__input nx-checkbox__input"
                  id="softQuota.enabled"
                  type="checkbox"
                />
                <span
                  class="nx-radio-checkbox__control nx-checkbox__box"
                >
                   
                </span>
                <span
                  aria-label=""
                  class="nx-radio-checkbox__content nx-checkbox__content"
                  title=""
                >
                  Enabled
                </span>
              </label>
            </div>
          </div>
          <footer
            class="nx-footer"
          >
            <div
              class="nx-btn-bar"
            >
              
              <button
                class="nx-form__cancel-btn nx-btn nx-btn--secondary"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="true"
                aria-label="There are no changes"
                class="nx-form__submit-btn disabled nx-btn nx-btn--primary"
                title="There are no changes"
              >
                Save
              </button>
            </div>
          </footer>
        </form>
      </div>
    </div>
  </main>
</div>
`;

exports[`BlobStoresForm renders the form and buttons when the S3 type is selected 1`] = `
<div>
  <main
    class="nx-page-main nxrm-blob-stores"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <span>
            Create Blob Store
          </span>
        </h1>
      </div>
    </div>
    <div
      class="nxrm-section nx-tile"
    >
      <div
        class="nx-tile-content"
      >
        <form
          class="nx-form nxrm-blob-stores-form"
        >
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="type"
            >
              <span
                class="nx-label__text"
              >
                Type
              </span>
            </label>
            <div
              class="nxrm-select"
            >
              <select
                class="nx-form-select"
                id="type"
                name="type"
              >
                <option
                  disabled=""
                  value=""
                />
                <option
                  value="file"
                >
                  File
                </option>
                <option
                  value="group"
                >
                  Group
                </option>
                <option
                  value="s3"
                >
                  S3
                </option>
              </select>
            </div>
          </div>
          <div
            aria-atomic="true"
            class="nx-alert nx-alert--warning"
          >
            <svg
              aria-hidden="false"
              aria-label="Warning"
              class="svg-inline--fa fa-exclamation-triangle fa-w-18 nx-icon"
              data-icon="exclamation-triangle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                fill="currentColor"
              />
            </svg>
            <div
              class="nx-alert__content"
            >
              <span>
                <em>
                  S3 blob stores require specific permissions to support full provisioning and functionality through Nexus Repository Manager. Consult our 
                  <a
                    href="https://links.sonatype.com/products/nexus/blobstores/s3/docs"
                    target="_blank"
                  >
                    documentation
                  </a>
                   for the specific set of permissions required.
                </em>
              </span>
            </div>
          </div>
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="name"
            >
              <span
                class="nx-label__text"
              >
                Name
              </span>
            </label>
            <div
              class="nx-text-input pristine"
            >
              <div
                class="nx-text-input__box"
              >
                <input
                  aria-errormessage="nx-text-input-invalid-message-22222222"
                  aria-invalid="false"
                  class="nx-text-input__input"
                  id="name"
                  name="name"
                  type="text"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-22222222"
                role="alert"
              />
            </div>
          </div>
          <div
            class="nxrm-s3-blobstore"
          >
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="bucketConfiguration.bucket.region"
              >
                <span
                  class="nx-label__text"
                >
                  Region
                </span>
              </label>
              <p
                class="nx-p"
              >
                Select an AWS Region
              </p>
              <div
                class="nxrm-select"
              >
                <select
                  class="nx-form-select"
                  id="bucketConfiguration.bucket.region"
                  name="bucketConfiguration.bucket.region"
                />
              </div>
            </div>
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="bucketConfiguration.bucket.name"
              >
                <span
                  class="nx-label__text"
                >
                  Bucket
                </span>
              </label>
              <p
                class="nx-p"
              >
                S3 Bucket Name (must be between 3 and 63 characters long containing only lower-case characters, numbers, periods, and dashes)
              </p>
              <div
                class="nx-text-input nx-text-input--long pristine"
              >
                <div
                  class="nx-text-input__box"
                >
                  <input
                    aria-errormessage="nx-text-input-invalid-message-33333333"
                    aria-invalid="false"
                    class="nx-text-input__input"
                    id="bucketConfiguration.bucket.name"
                    name="bucketConfiguration.bucket.name"
                    type="text"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                    data-icon="check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                    data-icon="exclamation-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="nx-text-input__invalid-message"
                  id="nx-text-input-invalid-message-33333333"
                  role="alert"
                />
              </div>
            </div>
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="bucketConfiguration.bucket.prefix"
              >
                <span
                  class="nx-label__text"
                >
                  Prefix
                </span>
              </label>
              <p
                class="nx-p"
              >
                S3 Path prefix
              </p>
              <div
                class="nx-text-input nx-text-input--long pristine"
              >
                <div
                  class="nx-text-input__box"
                >
                  <input
                    aria-errormessage="nx-text-input-invalid-message-44444444"
                    aria-invalid="false"
                    class="nx-text-input__input"
                    id="bucketConfiguration.bucket.prefix"
                    name="bucketConfiguration.bucket.prefix"
                    type="text"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                    data-icon="check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                    data-icon="exclamation-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="nx-text-input__invalid-message"
                  id="nx-text-input-invalid-message-44444444"
                  role="alert"
                />
              </div>
            </div>
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="bucketConfiguration.bucket.expiration"
              >
                <span
                  class="nx-label__text"
                >
                  Expiration Days
                </span>
              </label>
              <p
                class="nx-p"
              >
                How many days until deleted blobs are finally removed from the S3 bucket (-1 to disable)
              </p>
              <div
                class="nx-text-input pristine"
              >
                <div
                  class="nx-text-input__box"
                >
                  <input
                    aria-errormessage="nx-text-input-invalid-message-55555555"
                    aria-invalid="false"
                    class="nx-text-input__input"
                    id="bucketConfiguration.bucket.expiration"
                    name="bucketConfiguration.bucket.expiration"
                    type="text"
                    value="3"
                  />
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                    data-icon="check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                    data-icon="exclamation-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="nx-text-input__invalid-message"
                  id="nx-text-input-invalid-message-55555555"
                  role="alert"
                />
              </div>
              <span
                class="nxrm-s3-blobstore-prefix-text"
              >
                days
              </span>
            </div>
            <details
              aria-expanded="false"
              class="nx-accordion"
              id="nx-accordion-66666666"
              role="group"
            >
              <summary
                aria-controls="nx-accordion-66666666"
                class="nx-accordion__header"
                role="button"
              >
                <div
                  class="nx-accordion__summary-wrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-chevron-circle-down fa-w-16 nx-accordion__chevron nx-icon"
                    data-icon="chevron-circle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM273 369.9l135.5-135.5c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L256 285.1 154.4 183.5c-9.4-9.4-24.6-9.4-33.9 0l-17 17c-9.4 9.4-9.4 24.6 0 33.9L239 369.9c9.4 9.4 24.6 9.4 34 0z"
                      fill="currentColor"
                    />
                  </svg>
                  <h2
                    class="nx-accordion__header-title"
                  >
                    Authentication (Optional)
                  </h2>
                </div>
              </summary>
              <div
                class="nx-accordion__content"
              >
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.bucketSecurity.accessKeyId"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Access Key ID
                    </span>
                  </label>
                  <div
                    class="nx-text-input nx-text-input--long pristine"
                  >
                    <div
                      class="nx-text-input__box"
                    >
                      <input
                        aria-errormessage="nx-text-input-invalid-message-77777777"
                        aria-invalid="false"
                        class="nx-text-input__input"
                        id="bucketConfiguration.bucketSecurity.accessKeyId"
                        name="bucketConfiguration.bucketSecurity.accessKeyId"
                        type="text"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                        data-icon="check"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="nx-text-input__invalid-message"
                      id="nx-text-input-invalid-message-77777777"
                      role="alert"
                    />
                  </div>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.bucketSecurity.secretAccessKey"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Secret Access Key
                    </span>
                  </label>
                  <div
                    class="nx-text-input nx-text-input--long pristine"
                  >
                    <div
                      class="nx-text-input__box"
                    >
                      <input
                        aria-errormessage="nx-text-input-invalid-message-88888888"
                        aria-invalid="false"
                        autocomplete="new-password"
                        class="nx-text-input__input"
                        id="bucketConfiguration.bucketSecurity.secretAccessKey"
                        name="bucketConfiguration.bucketSecurity.secretAccessKey"
                        type="password"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                        data-icon="check"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="nx-text-input__invalid-message"
                      id="nx-text-input-invalid-message-88888888"
                      role="alert"
                    />
                  </div>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.bucketSecurity.role"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Assume Role ARN (Optional)
                    </span>
                  </label>
                  <div
                    class="nx-text-input nx-text-input--long pristine"
                  >
                    <div
                      class="nx-text-input__box"
                    >
                      <input
                        aria-errormessage="nx-text-input-invalid-message-99999999"
                        aria-invalid="false"
                        class="nx-text-input__input"
                        id="bucketConfiguration.bucketSecurity.role"
                        name="bucketConfiguration.bucketSecurity.role"
                        type="text"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                        data-icon="check"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="nx-text-input__invalid-message"
                      id="nx-text-input-invalid-message-99999999"
                      role="alert"
                    />
                  </div>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.bucketSecurity.sessionToken"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Session Token ARN (Optional)
                    </span>
                  </label>
                  <div
                    class="nx-text-input nx-text-input--long pristine"
                  >
                    <div
                      class="nx-text-input__box"
                    >
                      <input
                        aria-errormessage="nx-text-input-invalid-message-aaaaaaaa"
                        aria-invalid="false"
                        class="nx-text-input__input"
                        id="bucketConfiguration.bucketSecurity.sessionToken"
                        name="bucketConfiguration.bucketSecurity.sessionToken"
                        type="text"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                        data-icon="check"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="nx-text-input__invalid-message"
                      id="nx-text-input-invalid-message-aaaaaaaa"
                      role="alert"
                    />
                  </div>
                </div>
              </div>
            </details>
            <details
              aria-expanded="false"
              class="nx-accordion"
              id="nx-accordion-bbbbbbbb"
              role="group"
            >
              <summary
                aria-controls="nx-accordion-bbbbbbbb"
                class="nx-accordion__header"
                role="button"
              >
                <div
                  class="nx-accordion__summary-wrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-chevron-circle-down fa-w-16 nx-accordion__chevron nx-icon"
                    data-icon="chevron-circle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM273 369.9l135.5-135.5c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L256 285.1 154.4 183.5c-9.4-9.4-24.6-9.4-33.9 0l-17 17c-9.4 9.4-9.4 24.6 0 33.9L239 369.9c9.4 9.4 24.6 9.4 34 0z"
                      fill="currentColor"
                    />
                  </svg>
                  <h2
                    class="nx-accordion__header-title"
                  >
                    Encryption (Optional)
                  </h2>
                </div>
              </summary>
              <div
                class="nx-accordion__content"
              >
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.encryption.encryptionType"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Encryption Type
                    </span>
                  </label>
                  <p
                    class="nx-p"
                  >
                    The type of encryption for objects in the S3 Blob Store
                  </p>
                  <div
                    class="nxrm-select"
                  >
                    <select
                      class="nx-form-select"
                      id="bucketConfiguration.encryption.encryptionType"
                      name="bucketConfiguration.encryption.encryptionType"
                    >
                      <option />
                    </select>
                  </div>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.encryption.encryptionKey"
                  >
                    <span
                      class="nx-label__text"
                    >
                      KMS Key ID (Optional)
                    </span>
                  </label>
                  <p
                    class="nx-p"
                  >
                    If using KMS encryption, you can supply a Key ID. If left blank, then the default will be used
                  </p>
                  <div
                    class="nx-text-input nx-text-input--long pristine"
                  >
                    <div
                      class="nx-text-input__box"
                    >
                      <input
                        aria-errormessage="nx-text-input-invalid-message-cccccccc"
                        aria-invalid="false"
                        class="nx-text-input__input"
                        id="bucketConfiguration.encryption.encryptionKey"
                        name="bucketConfiguration.encryption.encryptionKey"
                        type="text"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                        data-icon="check"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="nx-text-input__invalid-message"
                      id="nx-text-input-invalid-message-cccccccc"
                      role="alert"
                    />
                  </div>
                </div>
              </div>
            </details>
            <details
              aria-expanded="false"
              class="nx-accordion"
              id="nx-accordion-dddddddd"
              role="group"
            >
              <summary
                aria-controls="nx-accordion-dddddddd"
                class="nx-accordion__header"
                role="button"
              >
                <div
                  class="nx-accordion__summary-wrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-chevron-circle-down fa-w-16 nx-accordion__chevron nx-icon"
                    data-icon="chevron-circle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM273 369.9l135.5-135.5c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L256 285.1 154.4 183.5c-9.4-9.4-24.6-9.4-33.9 0l-17 17c-9.4 9.4-9.4 24.6 0 33.9L239 369.9c9.4 9.4 24.6 9.4 34 0z"
                      fill="currentColor"
                    />
                  </svg>
                  <h2
                    class="nx-accordion__header-title"
                  >
                    Advanced Connection Settings (Optional)
                  </h2>
                </div>
              </summary>
              <div
                class="nx-accordion__content"
              >
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.advancedBucketConnection.endpoint"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Endpoint URL
                    </span>
                  </label>
                  <p
                    class="nx-p"
                  >
                    A custom endpoint URL for third party object stores using the S3 API
                  </p>
                  <div
                    class="nx-text-input nx-text-input--long pristine"
                  >
                    <div
                      class="nx-text-input__box"
                    >
                      <input
                        aria-errormessage="nx-text-input-invalid-message-eeeeeeee"
                        aria-invalid="false"
                        class="nx-text-input__input"
                        id="bucketConfiguration.advancedBucketConnection.endpoint"
                        name="bucketConfiguration.advancedBucketConnection.endpoint"
                        type="text"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                        data-icon="check"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="nx-text-input__invalid-message"
                      id="nx-text-input-invalid-message-eeeeeeee"
                      role="alert"
                    />
                  </div>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.advancedBucketConnection.maxConnectionPoolSize"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Max Connection Pool Size
                    </span>
                  </label>
                  <p
                    class="nx-p"
                  >
                    When set this value overrides the default connection pool size defined by Nexus, or the AWS Client
                  </p>
                  <div
                    class="nx-text-input pristine"
                  >
                    <div
                      class="nx-text-input__box"
                    >
                      <input
                        aria-errormessage="nx-text-input-invalid-message-ffffffff"
                        aria-invalid="false"
                        class="nx-text-input__input"
                        id="bucketConfiguration.advancedBucketConnection.maxConnectionPoolSize"
                        name="bucketConfiguration.advancedBucketConnection.maxConnectionPoolSize"
                        type="text"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                        data-icon="check"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="nx-text-input__invalid-message"
                      id="nx-text-input-invalid-message-ffffffff"
                      role="alert"
                    />
                  </div>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.advancedBucketConnection.signerType"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Signature Version
                    </span>
                  </label>
                  <p
                    class="nx-p"
                  >
                    An API signature version which may be required for third party object stores using the S3 API
                  </p>
                  <div
                    class="nxrm-select"
                  >
                    <select
                      class="nx-form-select"
                      id="bucketConfiguration.advancedBucketConnection.signerType"
                      name="bucketConfiguration.advancedBucketConnection.signerType"
                    >
                      <option />
                    </select>
                  </div>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="bucketConfiguration.advancedBucketConnection.forcePathStyle"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Use path-style access
                    </span>
                  </label>
                  <label
                    class="nx-radio-checkbox nx-checkbox tm-unchecked"
                    name="bucketConfiguration.advancedBucketConnection.forcePathStyle"
                  >
                    <input
                      class="nx-radio-checkbox__input nx-checkbox__input"
                      id="bucketConfiguration.advancedBucketConnection.forcePathStyle"
                      type="checkbox"
                    />
                    <span
                      class="nx-radio-checkbox__control nx-checkbox__box"
                    >
                       
                    </span>
                    <span
                      aria-label=""
                      class="nx-radio-checkbox__content nx-checkbox__content"
                      title=""
                    >
                      Setting this flag will result in path-style access being used for all requests
                    </span>
                  </label>
                </div>
              </div>
            </details>
          </div>
          <div
            class="nxrm-soft-quota"
          >
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="softQuota.enabled"
              >
                <span
                  class="nx-label__text"
                >
                  Soft Quota
                </span>
              </label>
              <p
                class="nx-p"
              >
                Raises an alert when the blob store exceeds a constraint
              </p>
              <label
                class="nx-radio-checkbox nx-checkbox tm-unchecked"
                name="softQuota.enabled"
              >
                <input
                  class="nx-radio-checkbox__input nx-checkbox__input"
                  id="softQuota.enabled"
                  type="checkbox"
                />
                <span
                  class="nx-radio-checkbox__control nx-checkbox__box"
                >
                   
                </span>
                <span
                  aria-label=""
                  class="nx-radio-checkbox__content nx-checkbox__content"
                  title=""
                >
                  Enabled
                </span>
              </label>
            </div>
          </div>
          <footer
            class="nx-footer"
          >
            <div
              class="nx-btn-bar"
            >
              
              <button
                class="nx-form__cancel-btn nx-btn nx-btn--secondary"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="true"
                aria-label="There are no changes"
                class="nx-form__submit-btn disabled nx-btn nx-btn--primary"
                title="There are no changes"
              >
                Save
              </button>
            </div>
          </footer>
        </form>
      </div>
    </div>
  </main>
</div>
`;
